tmux: copy/paste + OSX helpers. Misc coffeescript + vim stuff

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,4 +1,7 @@
 
+set -g default-command "reattach-to-user-namespace /bin/bash --login"
+bind y run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
@@ -24,4 +27,3 @@ bind Right resize-pane -R 10
 
 set -g default-terminal "screen-256color"
 setw -g mode-keys vi # enable vi keys
-set -g default-command "/bin/bash --login"
